--- a/public/sell.html
+++ b/public/sell.html
@@ -131,6 +131,8 @@
             <span id="currency">S$</span>
             <input type="text" id="listing-price" placeholder="Price of your item">
           </div>
+
+          <img src="/media/graph-placeholder.png" style="width: 100%; margin-top: 10px;" />
         </div>
       </div>
 
