--- a/public/profile.html
+++ b/public/profile.html
@@ -39,7 +39,7 @@
 
     <div id="profile-main">
       <div id="user-info">
-        <h1 id="username">NoobMaster69 Long Long Long Long Long Long Username</h1>
+        <h1 id="username"></h1>
         <!-- <div id="user-rating-info">
           <span id="user-rating-score">5.0</span>
           <span id="user-rating-num-reviews">(10)</span>
@@ -49,20 +49,20 @@
         <p>
           <span id="user-location">Singapore</span>
           &middot;
-          <span id="user-account-age">Joined 10y 10m ago</span>
+          <span id="user-account-age">Joined 1m ago</span>
         </p>
         <p>
           <span id="user-verified-status">Verified</span>
           <span id="user-verified-via-email" class="material-icons">mail_outline</span>
-          <span id="user-verified-via-phone" class="material-icons">phone</span>
+          <!-- <span id="user-verified-via-phone" class="material-icons">phone</span> -->
         </p>
         <p>
-          <span id="follower-count">128 followers</span>
+          <span id="follower-count">0 followers</span>
           &middot;
-          <span id="following-count">256 following</span>
+          <span id="following-count">0 following</span>
         </p>
 
-        <button id="edit-profile" class="secondary-button">
+        <button id="edit-profile" class="secondary-button" disabled>
           <span class="material-icons-outlined">edit</span>
           <span>Edit profile</span>
         </button>
@@ -72,163 +72,19 @@
         <div id="profile-views-info">
           <p>
             <span class="material-icons-outlined">visibility</span>
-            <span id="profile-view-count">4096</span>
+            <span id="profile-view-count">2</span>
           </p>
           <p>
             <span>people viewed your profile today</span>
           </p>
-          <p>
+          <!-- <p>
             <span class="material-icons-outlined">campaign</span> 
             <span id="profile-promotion-status-sidebar">Profile promotion is inactive</span>
-          </p>
+          </p> -->
         </div>
       </div>
 
       <div id="listings" class="profile-tab-content full-width-listings-container">
-        <div class="listing">
-          <div class="listing-info-top">
-            <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
-            <div class="listing-info-top-text">
-              <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-              <div class="listing-age">7 hours ago</div>
-            </div>
-          </div>
-          <div class="item-image-wrapper">
-            <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-          </div>
-          <div class="listing-info-bottom">
-            <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-            <div class="item-price">S$3999999999999999999999999999999.99</div>
-            <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-            <div class="item-condition">Absolutely trashed</div>
-          </div>
-          <div class="listing-action-buttons">
-            <button class="like-button liked material-icons"></button>
-            <span class="like-count">18</span>
-            <button class="start-chat primary-button"></button>
-            <button class="report-button material-icons">outlined_flag</button>
-          </div>
-        </div>
-        <div class="listing">
-          <div class="listing-info-top">
-            <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
-            <div class="listing-info-top-text">
-              <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-              <div class="listing-age">7 hours ago</div>
-            </div>
-          </div>
-          <div class="item-image-wrapper">
-            <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-          </div>
-          <div class="listing-info-bottom">
-            <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-            <div class="item-price">S$3999999999999999999999999999999.99</div>
-            <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-            <div class="item-condition">Absolutely trashed</div>
-          </div>
-          <div class="listing-action-buttons">
-            <button class="like-button liked material-icons"></button>
-            <span class="like-count">18</span>
-            <button class="start-chat primary-button"></button>
-            <button class="report-button material-icons">outlined_flag</button>
-          </div>
-        </div>
-        <div class="listing">
-          <div class="listing-info-top">
-            <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
-            <div class="listing-info-top-text">
-              <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-              <div class="listing-age">7 hours ago</div>
-            </div>
-          </div>
-          <div class="item-image-wrapper">
-            <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-          </div>
-          <div class="listing-info-bottom">
-            <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-            <div class="item-price">S$3999999999999999999999999999999.99</div>
-            <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-            <div class="item-condition">Absolutely trashed</div>
-          </div>
-          <div class="listing-action-buttons">
-            <button class="like-button liked material-icons"></button>
-            <span class="like-count">18</span>
-            <button class="start-chat primary-button"></button>
-            <button class="report-button material-icons">outlined_flag</button>
-          </div>
-        </div>
-        <div class="listing">
-          <div class="listing-info-top">
-            <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
-            <div class="listing-info-top-text">
-              <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-              <div class="listing-age">7 hours ago</div>
-            </div>
-          </div>
-          <div class="item-image-wrapper">
-            <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-          </div>
-          <div class="listing-info-bottom">
-            <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-            <div class="item-price">S$3999999999999999999999999999999.99</div>
-            <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-            <div class="item-condition">Absolutely trashed</div>
-          </div>
-          <div class="listing-action-buttons">
-            <button class="like-button liked material-icons"></button>
-            <span class="like-count">18</span>
-            <button class="start-chat primary-button"></button>
-            <button class="report-button material-icons">outlined_flag</button>
-          </div>
-        </div>
-        <div class="listing">
-          <div class="listing-info-top">
-            <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
-            <div class="listing-info-top-text">
-              <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-              <div class="listing-age">7 hours ago</div>
-            </div>
-          </div>
-          <div class="item-image-wrapper">
-            <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-          </div>
-          <div class="listing-info-bottom">
-            <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-            <div class="item-price">S$3999999999999999999999999999999.99</div>
-            <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-            <div class="item-condition">Absolutely trashed</div>
-          </div>
-          <div class="listing-action-buttons">
-            <button class="like-button liked material-icons"></button>
-            <span class="like-count">18</span>
-            <button class="start-chat primary-button"></button>
-            <button class="report-button material-icons">outlined_flag</button>
-          </div>
-        </div>
-        <div class="listing">
-          <div class="listing-info-top">
-            <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
-            <div class="listing-info-top-text">
-              <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-              <div class="listing-age">7 hours ago</div>
-            </div>
-          </div>
-          <div class="item-image-wrapper">
-            <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-          </div>
-          <div class="listing-info-bottom">
-            <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-            <div class="item-price">S$3999999999999999999999999999999.99</div>
-            <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-            <div class="item-condition">Absolutely trashed</div>
-          </div>
-          <div class="listing-action-buttons">
-            <button class="like-button liked material-icons"></button>
-            <span class="like-count">18</span>
-            <button class="start-chat primary-button"></button>
-            <button class="report-button material-icons">outlined_flag</button>
-          </div>
-        </div>
       </div>
 
       <div id="coins" class="profile-tab-content profile-tab-content-selected">
@@ -306,43 +162,14 @@
           </button>
         </div>
         
-        <h2>Redemption history</h2>
+        <h2>Green Points history</h2>
         <table class="platform-currency-transaction-history-table card">
-          <tbody>
+          <tr>
             <th>Item</th>
             <th>Date</th>
             <th>Points used</th>
-            <tr>
-              <td>Alienware m15 R5</td>
-              <td>22 Jul 2021</td>
-              <td>
-                <span>
-                  100
-                  <img src="/media/green-points.svg" alt="Green points logo">
-                </span>
-              </td>
-            </tr>
-            <tr>
-              <td>Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5</td>
-              <td>22 Jul 2021</td>
-              <td>
-                <span>
-                  100
-                  <img src="/media/green-points.svg" alt="Green points logo">
-                </span>
-              </td>
-            </tr>
-            <tr>
-              <td>Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5 Alienware m15 R5</td>
-              <td>22 Jul 2021</td>
-              <td>
-                <span>
-                  100
-                  <img src="/media/green-points.svg" alt="Green points logo">
-                </span>
-              </td>
-            </tr>
-          </tbody>
+          </tr>
+          <tbody id="green-pts-hist"></tbody>
         </table>
       </div>
 
