--- a/public/profile.html
+++ b/public/profile.html
@@ -25,9 +25,9 @@
       <div id="profile-menu-bar">
         <img id="profile-menu-bar-profile-picture" src="/media/placeholder-profile-picture.jpeg" alt="Profile picture">
         <div id="profile-menu-bar-actions">
-          <div class="profile-tab-switcher"><span>Listings</span></div>
+          <div class="profile-tab-switcher profile-tab-switcher-selected"><span>Listings</span></div>
           <!-- <div class="profile-tab-switcher"><span>Reviews</span></div> -->
-          <div class="profile-tab-switcher profile-tab-switcher-selected"><span>Coins</span></div>
+          <div class="profile-tab-switcher"><span>Coins</span></div>
           <!-- <div class="profile-tab-switcher"><span>Balance</span></div> -->
           <!-- <div class="profile-tab-switcher"><span>CarouBiz</span></div> -->
           <div id="green-points-profile-tab-switcher" class="profile-tab-switcher"><span>Green Points</span></div>
@@ -84,10 +84,10 @@
         </div>
       </div>
 
-      <div id="listings" class="profile-tab-content full-width-listings-container">
+      <div id="listings" class="full-width-listings-container profile-tab-content profile-tab-content-selected">
       </div>
 
-      <div id="coins" class="profile-tab-content profile-tab-content-selected">
+      <div id="coins" class="profile-tab-content">
         <h2>Carousell Coins</h2>
         <div id="coins-summary" class="card">
           <img src="/media/carousell-coin.svg" alt="Carousell Coins logo">
