--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -27,9 +27,9 @@
       <div id="user-actions-dropdown">
         <div id="user-actions-title">Actions</div>
         <a href="#" class="dropdown-for-logged-out"><i class="material-icons">login</i><span>Login / Register</span></a>
-        <a href="#" class="dropdown-for-login"><i class="material-icons">account_circle</i><span>Profile</span></a>
-        <a href="#" class="dropdown-for-login"><i class="material-icons">park</i><span>Green Points</span></a>
-        <a href="#" class="dropdown-for-login"><i class="material-icons">chat</i><span>Chats</span></a>
+        <a href="/profile.html" class="dropdown-for-login"><i class="material-icons">account_circle</i><span>Profile</span></a>
+        <a href="/profile.html#green" class="dropdown-for-login"><i class="material-icons">park</i><span>Green Points</span></a>
+        <a href="/chat.html" class="dropdown-for-login"><i class="material-icons">chat</i><span>Chats</span></a>
         <a href="#" class="dropdown-for-login"><i class="material-icons">logout</i><span>Logout</span></a>
       </div>
     </div>
