--- a/public/chat.html
+++ b/public/chat.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="/styles/chat.css">
   <link rel="stylesheet" href="/styles/loc-dialog.css" />
 
+  <link rel="stylesheet" href="/styles/notyf.css" />
+
   <title>Carousell Chats</title>
 </head>
 <body>
@@ -60,6 +62,8 @@
       </p>
     </div>
   </div>
+
+  <script src="/scripts/notyf.js"></script>
 
   <script src="/scripts/global.js"></script>
   <script src="/scripts/utils.js"></script>
